crates/skribble_rust/src/snapshots/skribble_rust____tests__can_scan_and_generate_css.snap
---
source: crates/skribble_rust/src/__tests.rs
expression: scanned.code
---
@layer base, default;

@property --sk-op-p {
  syntax: "<number>";
  inherits: true;
  initial-value: 1;
}

@property --sk-clr-p {
  syntax: "*";
  inherits: true;
  initial-value: 258.894;
}

@property --sk-p {
  syntax: "<color>";
  inherits: true;
  initial-value: #570df8;
}

@property --sk-op-s {
  syntax: "<number>";
  inherits: true;
  initial-value: 1;
}

@property --sk-clr-s {
  syntax: "*";
  inherits: true;
  initial-value: 314;
}

@property --sk-s {
  syntax: "<color>";
  inherits: true;
  initial-value: #f000b8;
}

@layer default {
  :root {
    --sk-op-p: 1;
    --sk-clr-p: 258.894 94.3775% 51.1765%;
    --sk-p: hsl(var(--sk-clr-p) / var(--sk-op-p));
    --sk-op-s: 1;
    --sk-clr-s: 314 100% 47.0588%;
    --sk-s: hsl(var(--sk-clr-s) / var(--sk-op-s));
  }

  .bg\:\$primary {
    background-color: hsl(var(--sk-clr-p) / var(--sk-op-p));
  }

  .bg\:\$secondary {
    background-color: hsl(var(--sk-clr-s) / var(--sk-op-s));
  }

  @media (width >= 768px) {
    .md\:p\:\$px {
      padding: 1px;
    }
  }
}

