crates/skribble_rust/src/snapshots/skribble_rust____tests__can_scan_and_generate_css@component-default.snap
---
source: crates/skribble_rust/src/__tests.rs
expression: scanned.code
---
@layer base, alias, default;

