crates/skribble_rust/src/snapshots/skribble_rust____tests__can_scan_and_generate_css@variables-default.snap
---
source: crates/skribble_rust/src/__tests.rs
expression: scanned.code
---
@layer base, alias, default;

@property --sk-a-hue {
  syntax: "<number> | <angle>";
  inherits: true;
  initial-value: 174;
}

@property --sk-a-saturation {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 60%;
}

@property --sk-a-lightness {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 50.9804%;
}

@property --sk-a-alpha {
  syntax: "<number> | <percentage>";
  inherits: true;
  initial-value: 1;
}

@property --sk-a {
  syntax: "<color>";
  inherits: true;
  initial-value: #37cdbe;
}

@layer default {
  :root {
    --sk-a-hue: 174;
    --sk-a-saturation: 60%;
    --sk-a-lightness: 50.9804%;
    --sk-a-alpha: 1;
    --sk-a: #37cdbe;
  }

  .\[height\=50px\] {
    height: 50px;
  }

  .p\:\[101px\] {
    padding: 101px;
  }

  .aspect\:\$square {
    aspect-ratio: 1;
  }

  .bg\:\$red100 {
    background-color: #fee2e2;
  }

  .bg\:\$accent {
    background-color: var(--sk-a, #37cdbe);
  }

  @media screen and (width >= 768px) {
    .screen\:md\:\[padding\=1px\] {
      padding: 1px;
    }
  }

  @media (width >= 768px) {
    .md\:\[padding\=1px\] {
      padding: 1px;
    }

    .md\:p\:\$px {
      padding: 1px;
    }

    .md\:pt\:\[1px\] {
      padding-top: 1px;
    }

    .md\:\(alpha\=0\.5\)\:bg\:\$pink100 {
      background-color: #fce7f380;
    }

    .md\:\(darken\=\=050\)\:bg\:\$red100 {
      background-color: #da0707;
    }
  }

  @media (prefers-color-scheme: dark) {
    .dark\:p\:\$px {
      padding: 1px;
    }
  }
}

